# OpenCV

./: CMakeLists.txt  README.md  main.cpp
User/: READEME.md
User/CameraModule/: CameraModule.cpp  CameraModule.h
User/FPSModule/: FPSModule.cpp  FPSModule.h
